--- a/action.yml
+++ b/action.yml
@@ -37,7 +37,8 @@ runs:
         exit 1
     - uses: actions/setup-go@v5
       with:
-        go-version: 1.22.1
+        go-version: '1.22'
+        check-latest: true
         cache: false
 
     - name: Gitops pusher
